<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <TextView
            android:id="@+id/threshold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_text" />

        <EditText
            android:id="@+id/threshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/_300"
            android:text="@string/_20"
            android:autofillHints="Watt" />

        <Button
            android:id="@+id/start_foreground_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_foregroundservice_btn"/>

        <Button
            android:id="@+id/stop_foreground_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_foregroundservice_btn"/>

        <Button
            android:id="@+id/enable_plug_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_plug"/>

        <Button
            android:id="@+id/disable_plug_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_plug"/>

</LinearLayout>